--- a/templates/login.html
+++ b/templates/login.html
@@ -3,93 +3,73 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Login</title>
     <style>
+      * {
+        margin: 0%;
+        padding: 0%;
+        box-sizing: border-box;
+      }
       body {
-        margin: 0;
-        padding: 0;
-        width: 100vw;
-        height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
         background-color: #131518;
         font-family: century gothic;
       }
       
       .container {
-        width: 90%;
-        height: 80%;
-        max-width: 520px;
+        max-width: 500px;
+        margin: auto;
+        position: relative;
+        top: 30px;
+        height: 90vh;
         background-color: #282a2d;
         border: 2px solid rgb(255, 132, 0);
         text-align: center;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
         border-radius: 8px;
         box-shadow: 4px 4px 10px -4px #9339f5;
       }
+      @media screen and (max-width: 550px) {
+        .container {
+          top: 0px;
+          max-width: 550px;
+          height: 100vh;
+        }
+      }
       
       #title {
-        /* position: relative; */
-        /* top: -38px; */
-        margin-bottom: 30px;
         color: #fff;
         font-size: 48px;
+        margin-top: 40px;
       }
       
       form {
         width: 80%;
-        /* border: 1px solid white; */
-        align-self: center;
-        text-align: center;
+        margin: 0px auto;
       }
       
       #login-fields {
-        /* border: 1px solid rgb(186, 32, 32); */
-        margin-top: 10px;
-        display: flex;
-        flex-direction: column;
+        width: 100%;
       }
       
       #login-fields input {
-        /* border: 1px solid rgb(239, 239, 239); */
-        padding: 10px 0px;
-        transition-duration: 0.2s;
-        margin-bottom: 10px;
+        margin-bottom: 20px;
+        padding: 12px 0px;
         width: 100%;
-        height: 32px;
-        color: #fff;
-        align-self: center;
         text-align: center;
+        color: #fff;
         font-size: 20px;
         background: #131518;
-        border: 2px solid #0f1114;
         border-radius: 8px;
         outline: none;
+        border: none;
       }
-      
-      /* #login-fields input:hover {
-                      transition-duration: 0.2s;
-                      border-color: #7a7a7a;
-                  }
-                  
-                  #login-fields input:focus {
-                      transition-duration: 0.2s;
-                      border-color: #fff;
-                  } */
-      
       ::placeholder {
         color: #7a7a7a;
         opacity: 1;
       }
       
       #password-relative {
-        margin: 8px 0 16px;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
+        margin-bottom: 20px;
+        text-align: left;
       }
       
       #password-relative a {
@@ -111,8 +91,6 @@
         margin-bottom: 6px;
         width: 60%;
         color: #fff;
-        align-self: center;
-        text-align: center;
         font-size: 20px;
         background: #9339f5;
         border: none;
@@ -126,9 +104,9 @@
         transition-duration: 0.2s;
         background: #6421eb;
       }
-      
       .message {
-        margin: 15px 30px 0px 30px;
+        width: 80%;
+        margin: 0px auto;
         color: #f53939;
         font-size: 18px;
       }
@@ -138,34 +116,25 @@
         color: #f57d7d;
       }
       
-      @media screen and (max-width: 500px) {
-        #title {
-          font-size: 38px;
-        }
-      
-        #login-fields input {
-          padding: 5px 0px;
-          font-size: 16px;
-        }
-      
-        button {
-          font-size: 16px;
-          padding: 10px 0px;
-        }
-      
-        .message {
-          margin: 10px 15px 0px 15px;
-          color: #f53939;
-          font-size: 14px;
+      @media screen and (max-width: 550px) {
+        form {
+          width: 90%;
         }
       }
     </style>
   </head>
   <body>
     <div class="container">
+      <br />
+      <br />
+      <br />
+      <br />
       <div id="login-header">
         <div id="title">Login</div>
       </div>
+      <br />
+      <br />
+      <br />
       <form method="post">
         {% csrf_token %}
         <div id="login-fields">
@@ -179,6 +148,7 @@
         </div>
         <button type="submit">Log In</button>
       </form>
+      <br />
       {% if error_message %}
         <p class="message">{{ error_message }}</p>
       {% endif %}
