fix bug in frinds profile page

--- a/templates/friend.html
+++ b/templates/friend.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>User</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>User</title>
     <style>
       * {
         margin: 0%;
@@ -95,7 +95,6 @@
         line-height: 4rem;
       }
     </style>
-    <title>Home Page</title>
   </head>
   <body>
     <div class="container">
