fix ui of search page

--- a/templates/search.html
+++ b/templates/search.html
@@ -147,6 +147,15 @@
         transition-duration: 0.2s;
         background: #6421eb;
       }
+      @media screen and (max-width: 550px) {
+        input {
+          margin-right: 0rem;
+          width: 69%;
+        }
+        .sbtn {
+          width: 29%;
+        }
+      }
     </style>
   </head>
   <body>
