--- a/templates/home.html
+++ b/templates/home.html
@@ -178,7 +178,7 @@
         {% for friend_data in data.friends %}
           {% if friend_data.accepted %}
             <div class="row1 user">
-              <a href="{{ friend_data.username }}">{{ friend_data.username }}</a>
+              <a href="../chat/{{ friend_data.username }}">{{ friend_data.username }}</a>
             </div>
           {% endif %}
         {% endfor %}
