--- a/templates/search.html
+++ b/templates/search.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     {% comment %} <meta http-equiv="refresh" content="1" /> {% endcomment %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="apple-touch-icon" sizes="180x180" href="https://filesstatic.netlify.app/chatapp/favicon_io/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="https://filesstatic.netlify.app/chatapp/favicon_io/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="https://filesstatic.netlify.app/chatapp/favicon_io/favicon-16x16.png" />
+    <link rel="manifest" href="https://filesstatic.netlify.app/chatapp/favicon_io/site.webmanifest" />
     <title>Search</title>
     <style>
       * {
@@ -168,8 +172,8 @@
       </div>
       <br />
       <div>
-        <form class="form" method="get" action="{% url 'search' %}">
-          <input type="text" name="q" placeholder="Search for users" value="{{ query }}" required />
+        <form class="form" method="get" action="{% url 'search' %}" onsubmit="return validateUsername()">
+          <input type="text" name="q" placeholder="Search for users" value="{{ query }}" id="username" required />
           <button class="sbtn" type="submit">Search</button>
         </form>
       </div>
@@ -191,5 +195,21 @@
       {% endif %}
       <div class="friend_list"></div>
     </div>
+    <script>
+      function validateUsername() {
+        var usernameInput = document.getElementById('username')
+        console.log(usernameInput)
+        var usernameValue = usernameInput.value
+      
+        // Check if the username contains spaces
+        if (/\s/.test(usernameValue)) {
+          alert('Username cannot contain spaces.')
+          usernameInput.value = usernameValue.replace(/\s/g, '')
+          return false
+        }
+      
+        return true // Allow form submission if there are no spaces
+      }
+    </script>
   </body>
 </html>
