--- a/templates/search.html
+++ b/templates/search.html
@@ -7,7 +7,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="https://filesstatic.netlify.app/chatapp/favicon_io/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="https://filesstatic.netlify.app/chatapp/favicon_io/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="https://filesstatic.netlify.app/chatapp/favicon_io/favicon-16x16.png" />
-    <link rel="manifest" href="https://filesstatic.netlify.app/chatapp/favicon_io/site.webmanifest" />
+    <link rel="manifest" href="https://filesstatic.netlify.app/chatapp/favicon_io/manifest.json" />
     <title>Search</title>
     <style>
       * {
