--- a/templates/edit.html
+++ b/templates/edit.html
@@ -3,6 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" content="Django chatapp" />
+    <meta name="description" content=" Django Chat Connect is a web application powered by Django, using AJAX JavaScript for real-time messaging. It enables user-friendly 
+chat, friend management, and social interaction." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Django chatapp" />
+    <meta name="description" content=" Django Chat Connect is a web application powered by Django, using AJAX JavaScript for real-time messaging. It enables user-friendly 
+chat, friend management, and social interaction." />
+    <meta property="og:image" content="https://filesstatic.netlify.app/Chatapp/img/share.jpeg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="Django chatapp" />
+    <meta property="twitter:image" content="https://filesstatic.netlify.app/Chatapp/img/share.jpeg" />
+    <meta name="description" content=" Django Chat Connect is a web application powered by Django, using AJAX JavaScript for real-time messaging. It enables user-friendly 
+chat, friend management, and social interaction." />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="apple-touch-icon" sizes="180x180" href="https://filesstatic.netlify.app/chatapp/favicon_io/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="https://filesstatic.netlify.app/chatapp/favicon_io/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="https://filesstatic.netlify.app/chatapp/favicon_io/favicon-16x16.png" />
@@ -159,7 +177,7 @@
         {% csrf_token %}
         <div id="login-fields">
           <label for="username">Username</label>
-          <input type="text" name="username" id="username" class="form-control" value="{{ initial_data.username }}" required />
+          <input type="text" name="username" id="username" class="form-control" value="{{ initial_data.username }}" required autocapitalize="none" />
           <label for="username">Email</label>
           <input type="email" name="email" id="email" class="form-control" value="{{ initial_data.email }}" required />
         </div>
@@ -189,7 +207,7 @@
         // Check if the username contains spaces
         if (/\s/.test(usernameValue)) {
           alert('Username cannot contain spaces.')
-          usernameInput.value = usernameValue.replace(/\s/g, "");
+          usernameInput.value = usernameValue.replace(/\s/g, '')
           return false
         }
       
